# matrixmul

./: .gitignore  CMakeLists.txt  CMakeLists_remote.txt  Makefile  Readme.txt
cmake/: FindMKL.cmake
src/: column.cc  inner.cc  load.cc  main.cc  mmul.hh
